--- a/_pgbackup/css/style_1627934403.css
+++ b/_pgbackup/css/style_1627934403.css
@@ -164,7 +164,7 @@ ul li {
 
 .section-title.white {
     color: #fff;
-    margin: 75px auto auto;
+    margin: 54px auto auto;
 }
 
 .section-title.white span {
@@ -177,9 +177,8 @@ ul li {
             Banner
 *************************** */
 .banner {
-    padding: 365px 0 0;
-    position: relative;
-    max-height: 912px;
+    margin: 16rem auto auto;
+    max-height: 37rem;
 }
 
 .bnr-left-sape {
@@ -248,7 +247,8 @@ ul li {
 }
 
 .banner .bnr-btn {
-    margin-top: auto;
+    margin-top: 17px;
+    display: inline-flex;
 }
 
 .banner .bnr-btn ul li a:hover {
@@ -256,7 +256,7 @@ ul li {
 }
 
 .banner .bnr-btn ul {
-    margin-top: 30px;
+    padding-left: 0px;
 }
 
 .banner .bnr-btn ul li a {
@@ -2037,8 +2037,13 @@ floating
     }
 
     .banner {
-        padding: 100px 0 0;
         text-align: center;
+        height: auto !important;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0px;
+        margin-bottom: -2rem;
+        margin-top: 7rem;
     }
 
     .banner-3 {
@@ -11527,8 +11532,8 @@ Copyright (c) 2015 Daniel Eden
     font-family: 'Mulish', sans-serif;
     color: #ffffff;
     font-weight: 700;
-    font-size: 15px;
     top: -17px;
+    font-size: 15px;
 }
 
 .feature-panel_new {
@@ -12295,6 +12300,62 @@ align-content: {
     width: 100%;
 }
 
+/* Safari 10.1+ */
+@media not all and (min-resolution:.001dpcm) {
+    .blob1 {
+        height: 857px;
+        z-index: -10;
+        position: relative;
+        margin-bottom: 0;
+        margin-left: 0px;
+        top: -;
+        display: none;
+        background-image: url('../images/img-5.svg');
+    }
+
+    .blob3 {
+        left: 1768px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+    }
+
+    .blob4k2 {
+        height: 2136px;
+        z-index: -14;
+        left: -1756px;
+        top: 1550px;
+        position: absolute;
+        margin-bottom: -1337px;
+        display: none;
+        float: left;
+    }
+
+    .blob34k {
+        left: 2884px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 3000px;
+        height: 1677px;
+    }
+
+    .blob34k6 {
+        left: 2884px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 6000px;
+        height: 1677px;
+    }
+}
+
 .blob1 {
     height: 857px;
     z-index: -10;
@@ -12371,8 +12432,8 @@ align-content: {
 
 .class2 {
     z-index: -6;
-    margin: auto auto 365px;
     height: auto;
+    margin: 34px auto 348px;
 }
 
 .spce2 {
@@ -12399,6 +12460,8 @@ align-content: {
 
     .banner {
         height: auto !important;
+        margin-bottom: 0rem;
+        margin-top: 8rem;
     }
 }
 
@@ -12585,14 +12648,12 @@ align-content: {
         top: 1550px;
         position: absolute;
         margin-bottom: -1337px;
-        display: inline;
         float: left;
     }
 
     .blob34k {
         left: 2884px;
         z-index: -16;
-        display: inline;
         overflow: scroll;
         position: absolute;
         margin-top: -290px;
@@ -12603,7 +12664,6 @@ align-content: {
     .blob34k6 {
         left: 2884px;
         z-index: -16;
-        display: inline;
         overflow: scroll;
         position: absolute;
         margin-top: -290px;
@@ -12745,13 +12805,15 @@ section .wave.wave4 {
 }
 
 .imgfo {
+    margin: auto;
+    padding: auto;
     position: relative;
-    right: 160px;
+    left: -158px;
 }
 
 .texti {
-    margin-left: 84px;
-    margin-right: 40px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: justify;
 }
 
@@ -12807,6 +12869,7 @@ section .wave.wave4 {
     font-family: 'Mulish', sans-serif;
     font-size: 15px;
     color: #ffffff;
+    margin: auto 30px;
 }
 
 .testimonials2 {
@@ -12835,7 +12898,9 @@ section .wave.wave4 {
 
 @media screen and (max-width:1023px) {
     .wowhead {
-        margin: -194px auto auto;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
     }
 }
 
@@ -12846,9 +12911,8 @@ section .wave.wave4 {
     }
 
     .but {
+        padding: 0px 0px 0px 5px;
         margin: auto;
-        padding: auto;
-        position: center;
         text-align: center;
     }
 }
@@ -12905,5 +12969,158 @@ section .wave.wave4 {
     .footersm {
         font-size: 14px;
         margin: auto 10px;
+    }
+}
+
+@media screen and (max-width:499px) {
+    .contact-form {
+        margin: 10%;
+    }
+
+    .textism {
+        margin: 10%;
+        font-size: 12px;
+    }
+}
+
+.texti {
+}
+
+.textism {
+}
+
+@media screen and (max-width:499px) {
+    .section-title h1 {
+        font-size: 24px;
+        margin: 10px;
+    }
+
+    .imgsvg {
+        width: 95%;
+    }
+}
+
+.imgsvg {
+}
+
+@media screen and (max-width:499px) {
+    .btmagncysm {
+        text-align: center;
+    }
+
+    .h2 {
+        font-size: 21px;
+    }
+
+    .spacesm {
+        height: 89px;
+    }
+
+    .feat {
+    }
+
+    .featuresm {
+    }
+}
+
+@media screen and (max-width:413px) {
+    .iconssm {
+        font-size: 1px;
+    }
+
+    .new_class {
+        font-family: 'Mulish', sans-serif;
+        font-size: 12px;
+    }
+
+    .feature--content {
+        width: 100%;
+        margin: auto;
+        line-height: 14px;
+    }
+
+    .section-title > span {
+        font-size: 16px;
+        margin: auto;
+        text-align: center;
+    }
+
+    p {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .hello2 {
+        border-radius: 4px;
+    }
+}
+
+@media screen and (max-width:413px) {
+    .spce2 {
+        height: 38px;
+    }
+}
+
+.team-social {
+    margin: auto;
+    text-align: center;
+}
+
+@media screen and (max-width:1199px) {
+    .wowhead {
+    }
+}
+
+.success {
+    clear: both;
+    display: none;
+    color: #96c346;
+    padding-bottom: 20px;
+}
+
+.error {
+    clear: both;
+    display: none;
+    color: #e7505a;
+    padding-bottom: 20px;
+}
+
+@media screen and (max-width:799px) {
+}
+
+@media screen and (max-width:767px) {
+    .notice {
+    }
+}
+
+.notice {
+    margin: auto;
+    padding: auto;
+    width: 80%;
+}
+
+.but {
+    padding: 0px;
+    margin: 0;
+    display: flex;
+}
+
+.hey {
+    display: inline-flex;
+}
+
+@media screen and (max-width:499px) {
+    .but {
+        display: inline;
+    }
+}
+
+@media screen and (max-width:299px) {
+    .banner {
+    }
+
+    .banner {
+        margin-bottom: 13rem;
     }
 }
