--- a/_pgbackup/css/style_1627935654.css
+++ b/_pgbackup/css/style_1627935654.css
@@ -177,9 +177,8 @@ ul li {
             Banner
 *************************** */
 .banner {
-    padding: 365px 0 0;
-    position: relative;
-    max-height: 912px;
+    margin: 16rem auto auto;
+    max-height: 37rem;
 }
 
 .bnr-left-sape {
@@ -227,7 +226,6 @@ ul li {
     color: #666666;
     display: block;
     font-size: 24px;
-    margin-right: 67px;
 }
 
 .banner .bnr-social {
@@ -248,7 +246,8 @@ ul li {
 }
 
 .banner .bnr-btn {
-    margin-top: auto;
+    margin-top: 17px;
+    display: inline-flex;
 }
 
 .banner .bnr-btn ul li a:hover {
@@ -256,7 +255,7 @@ ul li {
 }
 
 .banner .bnr-btn ul {
-    margin-top: 30px;
+    padding-left: 0px;
 }
 
 .banner .bnr-btn ul li a {
@@ -264,10 +263,11 @@ ul li {
     color: #666666;
     border-radius: 10px;
     display: inline-block;
-    margin-right: 15px;
     border: 1px solid #ececec;
     background: -webkit-radial-gradient(center bottom, #f3f3f3 0%, rgb(255, 255, 255) 100%);
     box-shadow: 5px 12px 39px #cacaca;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .banner .bnr-btn ul li a:hover {
@@ -1760,10 +1760,11 @@ floating
     bottom: 40px;
     right: 30px;
     display: none;
+    z-index: 300;
 }
 
 #backtotop i {
-    color: #0080fe;
+    color: #212a33;
 }
 
 #backtotop i:hover {
@@ -2037,8 +2038,13 @@ floating
     }
 
     .banner {
-        padding: 100px 0 0;
         text-align: center;
+        height: auto !important;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0px;
+        margin-bottom: -2rem;
+        margin-top: 7rem;
     }
 
     .banner-3 {
@@ -12295,6 +12301,62 @@ align-content: {
     width: 100%;
 }
 
+/* Safari 10.1+ */
+@media not all and (min-resolution:.001dpcm) {
+    .blob1 {
+        height: 857px;
+        z-index: -10;
+        position: relative;
+        margin-bottom: 0;
+        margin-left: 0px;
+        top: -;
+        display: none;
+        background-image: url('../images/img-5.svg');
+    }
+
+    .blob3 {
+        left: 1768px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+    }
+
+    .blob4k2 {
+        height: 2136px;
+        z-index: -14;
+        left: -1756px;
+        top: 1550px;
+        position: absolute;
+        margin-bottom: -1337px;
+        display: none;
+        float: left;
+    }
+
+    .blob34k {
+        left: 2884px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 3000px;
+        height: 1677px;
+    }
+
+    .blob34k6 {
+        left: 2884px;
+        z-index: -16;
+        display: none;
+        overflow: scroll;
+        position: absolute;
+        margin-top: -290px;
+        top: 6000px;
+        height: 1677px;
+    }
+}
+
 .blob1 {
     height: 857px;
     z-index: -10;
@@ -12371,8 +12433,8 @@ align-content: {
 
 .class2 {
     z-index: -6;
-    margin: auto auto 365px;
     height: auto;
+    margin: 34px auto 348px;
 }
 
 .spce2 {
@@ -12399,6 +12461,8 @@ align-content: {
 
     .banner {
         height: auto !important;
+        margin-bottom: 0rem;
+        margin-top: 8rem;
     }
 }
 
@@ -12426,10 +12490,13 @@ align-content: {
     color: #ffffff;
     font-family: 'Mulish', sans-serif;
     position: center;
-    display: inline;
-    width: 154%;
+    display: block;
+    width: 98%;
     text-align: center;
-    margin-bottom: 35px;
+    padding-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -50px;
 }
 
 .redes {
@@ -12467,12 +12534,12 @@ align-content: {
 .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
-    width: 40%;
+    width: 80%;
     overflow: hidden;
-    display: flex;
-    border: 7px solid #888;
-    border-radius: 9px;
+    border-radius: 20px;
+    border: 1px solid rgba(136, 136, 136, 0.18);
+    box-shadow: 0px 0px 21px 2px rgba(35, 35, 35, 0.3);
+    padding: 20px;
 }
 
 /* The Close Button */
@@ -12585,14 +12652,12 @@ align-content: {
         top: 1550px;
         position: absolute;
         margin-bottom: -1337px;
-        display: inline;
         float: left;
     }
 
     .blob34k {
         left: 2884px;
         z-index: -16;
-        display: inline;
         overflow: scroll;
         position: absolute;
         margin-top: -290px;
@@ -12603,7 +12668,6 @@ align-content: {
     .blob34k6 {
         left: 2884px;
         z-index: -16;
-        display: inline;
         overflow: scroll;
         position: absolute;
         margin-top: -290px;
@@ -12790,8 +12854,8 @@ section .wave.wave4 {
 
 .footer2 {
     display: inline;
-    margin-left: 52px;
-    margin-right: 52px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 25px;
     font-family: 'Mulish', sans-serif;
     margin-bottom: -;
@@ -12838,7 +12902,9 @@ section .wave.wave4 {
 
 @media screen and (max-width:1023px) {
     .wowhead {
-        margin: -194px auto auto;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
     }
 }
 
@@ -12849,10 +12915,9 @@ section .wave.wave4 {
     }
 
     .but {
-        position: center;
-        text-align: center;
         padding: 0px 0px 0px 5px;
         margin: auto;
+        text-align: center;
     }
 }
 
@@ -12992,5 +13057,74 @@ section .wave.wave4 {
 @media screen and (max-width:767px) {
     .hello2 {
         border-radius: 4px;
+    }
+}
+
+@media screen and (max-width:413px) {
+    .spce2 {
+        height: 38px;
+    }
+}
+
+.team-social {
+    margin: auto;
+    text-align: center;
+}
+
+@media screen and (max-width:1199px) {
+    .wowhead {
+    }
+}
+
+.success {
+    clear: both;
+    display: none;
+    color: #96c346;
+    padding-bottom: 20px;
+}
+
+.error {
+    clear: both;
+    display: none;
+    color: #e7505a;
+    padding-bottom: 20px;
+}
+
+@media screen and (max-width:799px) {
+}
+
+@media screen and (max-width:767px) {
+    .notice {
+    }
+}
+
+.notice {
+    margin: auto;
+    padding: auto;
+    width: 80%;
+}
+
+.but {
+    padding: 0px;
+    margin: 0;
+    display: flex;
+}
+
+.hey {
+    display: inline-flex;
+}
+
+@media screen and (max-width:499px) {
+    .but {
+        display: inline;
+    }
+}
+
+@media screen and (max-width:299px) {
+    .banner {
+    }
+
+    .banner {
+        margin-bottom: 13rem;
     }
 }
