--- a/css/style.css
+++ b/css/style.css
@@ -1760,10 +1760,11 @@ floating
     bottom: 40px;
     right: 30px;
     display: none;
+    z-index: 300;
 }
 
 #backtotop i {
-    color: #0080fe;
+    color: #212a33;
 }
 
 #backtotop i:hover {
@@ -12489,10 +12490,13 @@ align-content: {
     color: #ffffff;
     font-family: 'Mulish', sans-serif;
     position: center;
-    display: inline;
-    width: 154%;
+    display: block;
+    width: 98%;
     text-align: center;
-    margin-bottom: 35px;
+    padding-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -50px;
 }
 
 .redes {
@@ -12850,8 +12854,8 @@ section .wave.wave4 {
 
 .footer2 {
     display: inline;
-    margin-left: 52px;
-    margin-right: 52px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 25px;
     font-family: 'Mulish', sans-serif;
     margin-bottom: -;
