--- a/_pgbackup/css/bootstrap.min_1627936538.css
+++ b/_pgbackup/css/bootstrap.min_1627936538.css
@@ -38,7 +38,7 @@
 ::after,
 ::before {
     box-sizing: border-box;
-    padding-bottom: 1px;
+    z-index: auto;
 }
 
 html {
@@ -64,7 +64,6 @@ hgroup,
 main,
 nav,
 section {
-    display: block;
 }
 
 body {
@@ -178,6 +177,7 @@ a {
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
+    text-align: center;
 }
 
 a:hover {
@@ -220,9 +220,8 @@ figure {
 }
 
 img {
-    vertical-align: middle;
     border-style: none;
-    z-index: 0;
+    z-index: 2;
 }
 
 svg {
@@ -401,6 +400,7 @@ h1 {
 .h2,
 h2 {
     font-size: 2rem;
+    margin: auto;
 }
 
 .h3,
@@ -477,16 +477,15 @@ mark {
 }
 
 .list-inline {
-    padding-left: 0;
     list-style: none;
+    display: inherit;
 }
 
 .list-inline-item {
-    display: inline-block;
+    display: inline-flex;
 }
 
 .list-inline-item:not(:last-child) {
-    margin-right: .5rem;
 }
 
 .initialism {
@@ -512,6 +511,7 @@ mark {
 .img-fluid {
     max-width: 100%;
     height: auto;
+    z-index: 0;
 }
 
 .img-thumbnail {
@@ -580,10 +580,10 @@ pre code {
 
 .container {
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (min-width:576px){
@@ -606,8 +606,8 @@ pre code {
 
 @media (min-width:1200px){
     .container {
-        max-width: 1228px;
-        padding-left: 57px;
+        max-width: 1140px;
+        max-height: 542px;
     }
 }
 
@@ -714,7 +714,7 @@ pre code {
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
-    z-index: 0;
+    z-index: 2;
 }
 
 .col {
@@ -1006,7 +1006,6 @@ pre code {
     }
 
     .col-sm-12 {
-        float: left;
     }
 
     .order-sm-first {
@@ -1195,8 +1194,7 @@ pre code {
         -ms-flex: 0 0 66.666667%;
         flex: 0 0 66.666667%;
         max-width: 66.666667%;
-        margin-top: -156px;
-        margin-left: -13px;
+        margin-left: -;
     }
 
     .col-md-9 {
@@ -1406,7 +1404,7 @@ pre code {
     .col-lg-8 {
         -ms-flex: 0 0 66.666667%;
         flex: 0 0 66.666667%;
-        max-width: 66.666667%;
+        width: 100%;
     }
 
     .col-lg-9 {
@@ -2080,6 +2078,7 @@ pre code {
     border: 1px solid #ced4da;
     border-radius: 11px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin-bottom: auto;
 }
 
 @media screen and (prefers-reduced-motion:reduce){
@@ -4417,12 +4416,13 @@ input[type=submit].btn-block {
 }
 
 .navbar-toggler {
-    padding: .25rem .75rem;
-    font-size: 1.25rem;
-    line-height: 1;
+    line-height: 0;
     background-color: transparent;
-    border: 1px solid transparent;
     border-radius: .25rem;
+    background-image: url('../images/boton-de-menu-de-tres-lineas-horizontales.png');
+    padding: 0.20rem;
+    background-size: cover;
+    border: 0px solid transparent;
 }
 
 .navbar-toggler:focus,
@@ -6278,6 +6278,7 @@ button.close {
 
 .carousel {
     position: relative;
+    height: 100%;
 }
 
 .carousel-inner {
